# vonMises

./: .gitignore  404.html  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.bat  build.py  build.sh  environment.yml  index.html  install.py  pyproject.toml  requirements.txt  ruff-lint.bat  ruff-lint.sh  ruff.bat  setup.cfg  setup.py  sitemap.xml
.github/workflows/: c-cpp.yml  ci-windows.yml  ci.yml  linux.yml  win.yml
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: deploy  deploy.bat  serve  serve.bat
search/: search_index.json
src/: __init__.py  __main__.py  eigen.py  lib.py  utils.py
src/eigenlib/: eigen_API.cpp  logger.cpp  logger.h  rayleigh_quotient.h  utils.cpp  utils.h  von_mises.cpp  von_mises.h
src/lib/: eigen.cpp  eigen.h  eigen_API.h  logger.h  rayleigh_quotient.cpp  utils.cpp  utils.h
src/vonmises/: __main__.py  eigen.py  lib.py  utils.py
src/vonmiseslib/: logger.h  rayleigh_quotient.cpp  utils.cpp  version.h.in  vonMises_API.cpp  vonMises_API.h  von_mises.cpp  von_mises.h
test-data/: MATRIX.mat
test/unit-test/: test_array_to_mat.py  test_compare_eigenvalues.py  test_eigen.py  test_eigenvalues.py  test_eigenvectors.py  test_mat_to_array.py
