[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "vonMises"
version = "1.0.0"
authors = [{name = "Saud Zahir", email = "m.saud.zahir@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++ :: 11",
  "License :: MIT",
  "Operating System :: Linux",
]
description = "Numerical Algorithm for Eigenvalue Problems using Rayleigh Quotient and von Mises Iteration with Deflation."
keywords = ["numerical", "eigenvalues", "rayleigh", "von_mises"]
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
]

[project.urls]
"Homepage" = "https://github.com/saudzahirr/vonMises"

[project.scripts]
"vonMises" = "vonmises.__main__:main"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
sdist.exclude = [".pyc", "__pycache__"]
sdist.include = [
  "src/vonmises/__init__.py",
  "src/vonmises/__main__.py",
  "src/vonmises/eigen.py",
  "src/vonmises/lib.py",
  "src/vonmises/utils.py",
]
wheel.install-dir = "vonmises/lib"
wheel.exclude = ["**/lib/include", "**/lib/share", "**/lib/lib64"]

[tool.coverage.run]
disable_warnings = ['module-not-imported']
relative_files = true

source_pkgs = ["vonMises"]
