[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "scikit-build",
  "cmake",
  "ninja",
  "numpy",
  "scipy",
]

[project]
name = "vonMises"
version = "1.0.0"
description = "Numerical Algorithm for Eigenvalue Problems using Rayleigh Quotient and von Mises Iteration with Deflation."
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
  {name = "Saud Zahir", email = "m.saud.zahir@gmail.com"}
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++ :: 11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]

keywords = [
  "numerical", "eigenvalues", "rayleigh", "von_mises"
]

readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://saudzahirr.github.io/vonMises/"

[project.scripts]
vonMises = "vonmises.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
