[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "scikit-build",
  "cmake",
  "ninja",
]

[project]
name = "vonMises"
dynamic = ["version"]
authors = [{name = "Saud Zahir", email = "m.saud.zahir@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++ :: 11",
  "License :: MIT",
  "Operating System :: Linux",
]
description = "Numerical Algorithm for Eigenvalue Problems using Rayleigh Quotient and von Mises Iteration with Deflation."
keywords = ["numerical", "eigenvalues", "rayleigh", "von_mises"]
license = {file = "LICENSE"}
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/saudzahirr/vonMises"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[project.scripts]
"vonMises" = "vonmises.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
