[metadata]
name = vonMises
version = 1.0.0
author = Saud Zahir
author_email= m.saud.zahir@gmail.com
description = Numerical Algorithm for Eigen Value Problems
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/saudzahirr/vonMises
project_urls =
    Source Code = https://github.com/saudzahirr/vonMises
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Programming Language :: C++ :: 11
    Programming Language :: Python :: 3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Architecture :: AMD64

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy
    importlib-metadata; python_version < "3.10"

[options.entry_points]
console_scripts =
    vonMises = src.__main__:main
